# Steel-Monsters

./: .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: build.yml
src/: game.c  game.h  log.c  log.h  main.c  tank.c  tank.h  ui.c  ui.h
